418
OK, here is an example which "works" in terms of not working.
{code}
scala> <xml:group>hello</xml:group>.toString  
<console>:5: error: ambiguous reference to overloaded definition,
both method toString in class Group of type (StringBuilder)Nothing
and  method toString in class Node of type ()String
match expected type ?
       <xml:group>hello</xml:group>.toString
                                    ^

scala> <xml:group>hello</xml:group>.toString()
res1: String = hello
{code}
